Hardcoded size of the check, cross and sum SVG-images to prevent the horizontal scrollbar.

--- a/views/game/game.css
+++ b/views/game/game.css
@@ -259,10 +259,10 @@
         grid-template-rows: 1fr;
         grid-template-areas: none;
     }
-
+    
     #check, #cross, #sum {
-        width: auto;
-        height: auto;
+        width: 10vw;
+        height: 10vw;
     }
     
     .header {
